+重构目录结构，优化部分功能代码。

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           transform: scale(1); } }
 
       .ball-beat > div {
-        background-color: #279fcf;
+        background-color: #00E7C1;
         width: 15px;
         height: 15px;
         border-radius: 100% !important;
